Calculate correct cull rect for SVG inline text boxes.

Cull rects were larger than needed when text was selected.

Identified while investigating test failure of:

svg/text/text-selection-align-06-b.svg

as part of http://crrev.com/2073563002 for crbug.com/616600, though
fixing these did not actually fix any issues for that patch or bug.

Reland of http://crrev.com/2137753002 with updated test to
approximate expected rects to allow for minor font metrics differences
across platforms. Notably, previous patch failed on Android Nexus 4
due to 1 - 2 pixel deltas.

BUG=627233
TBR=pdr

Review-Url: https://codereview.chromium.org/2151323004
Cr-Commit-Position: refs/heads/master@{#405920}

Former-commit-id: 344d1d48097756a754766c75b9c49c756f85d20e