third_party/WebKit/Source/core/editing/DOMSelection.h
@@ -45,7 +45,7 @@ class Node;
 class Range;
 class TreeScope;
 
-class DOMSelection final : public GarbageCollected<DOMSelection>, public ScriptWrappable, public DOMWindowProperty {
+class CORE_EXPORT DOMSelection final : public GarbageCollected<DOMSelection>, public ScriptWrappable, public DOMWindowProperty {
     DEFINE_WRAPPERTYPEINFO();
     USING_GARBAGE_COLLECTED_MIXIN(DOMSelection);
 public:
